--- a/business/templates/financingplans/financingplan17.html
+++ b/business/templates/financingplans/financingplan17.html
@@ -18,7 +18,7 @@
                     Lenders You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products You Qualify For</th>
@@ -138,7 +138,7 @@
                     Personal Credit Cards You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Credit Card Name</th>
@@ -1145,7 +1145,7 @@
                     Revenue Lending You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1186,7 +1186,7 @@
                     Term Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1231,7 +1231,7 @@
                     Personal Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <tbody>
                         <thead>
                         <tr>
@@ -1418,7 +1418,7 @@
 
 
                 <div class="card-body">
-                    <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable2" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Name</th>
@@ -1459,7 +1459,7 @@
                     No Credit Check Loans
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th> Lender Name</th>
@@ -1581,7 +1581,7 @@
                     Invoice Factoring Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1622,7 +1622,7 @@
                     Invoice Financing Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1666,7 +1666,7 @@
                     Equipment Financing Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1707,7 +1707,7 @@
                     Lenders You Do Not Currently Qualify <br>*But Strategies On How To Qualify For Them In The Future*
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products We Want To Qualify For In The Future</th>
