--- a/business/templates/financingplans/financingplan2.html
+++ b/business/templates/financingplans/financingplan2.html
@@ -32,7 +32,7 @@
                         Lenders You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products You Qualify For</th>
@@ -165,7 +165,7 @@
                         Business Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -636,7 +636,7 @@
                         Personal Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Credit Card Name</th>
@@ -1652,7 +1652,7 @@
                         Revenue Lending You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1696,7 +1696,7 @@
                         Term Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1743,7 +1743,7 @@
                         Lines Of Credit You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <th>Lender Name</th>
@@ -1786,7 +1786,7 @@
                         Personal Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -1965,7 +1965,7 @@
 
 
                     <div class="card-body">
-                        <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable2" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -2007,7 +2007,7 @@
                         No Credit Check Loans
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th> Lender Name</th>
@@ -2129,7 +2129,7 @@
                         Business Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -2603,7 +2603,7 @@
                         Invoice Factoring Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -2646,7 +2646,7 @@
                         Invoice Financing Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -2692,7 +2692,7 @@
                         Equipment Financing Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -2737,7 +2737,7 @@
                         Future*
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products We Want To Qualify For In The Future</th>
