--- a/business/templates/financingplans/financingplan3.html
+++ b/business/templates/financingplans/financingplan3.html
@@ -32,7 +32,7 @@
                         Lenders You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products You Qualify For</th>
@@ -164,7 +164,7 @@
                         Personal Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Credit Card Name</th>
@@ -1180,7 +1180,7 @@
                         Revenue Lending You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1223,7 +1223,7 @@
                         Revenue Lending You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1267,7 +1267,7 @@
                         Lines Of Credit You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <th>Lender Name</th>
@@ -1310,7 +1310,7 @@
                         Personal Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -1497,7 +1497,7 @@
 
 
                     <div class="card-body">
-                        <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable2" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -1538,7 +1538,7 @@
                         No Credit Check Loans
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th> Lender Name</th>
@@ -1660,7 +1660,7 @@
                         SBA Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <th>Lender Name</th>
                             <th>Personal Credit Score Needed</th>
@@ -1702,7 +1702,7 @@
                         Invoice Factoring Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1745,7 +1745,7 @@
                         Invoice Financing Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1791,7 +1791,7 @@
                         Equipment Financing Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1836,7 +1836,7 @@
                         Future*
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products We Want To Qualify For In The Future</th>
