--- a/business/templates/financingplans/financingplan10.html
+++ b/business/templates/financingplans/financingplan10.html
@@ -32,7 +32,7 @@
                         Lenders You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products You Qualify For</th>
@@ -174,7 +174,7 @@
                         Personal Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Credit Card Name</th>
@@ -1190,7 +1190,7 @@
                         Revenue Lending You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1234,7 +1234,7 @@
                         Term Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1283,7 +1283,7 @@
                         Lines Of Credit You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <th>Lender Name</th>
@@ -1326,7 +1326,7 @@
                         Lenders
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -1796,7 +1796,7 @@
                         Personal Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -1983,7 +1983,7 @@
 
 
                     <div class="card-body">
-                        <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable2" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -2025,7 +2025,7 @@
                         No Credit Check Loans
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th> Lender Name</th>
@@ -2146,7 +2146,7 @@
                         Business Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -2616,7 +2616,7 @@
                         SBA Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <th>Lender Name</th>
                             <th>Personal Credit Score Needed</th>
@@ -2658,7 +2658,7 @@
                         Invoice Factoring Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -2702,7 +2702,7 @@
                         Invoice Financing Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -2749,7 +2749,7 @@
                         Equipment Financing Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -2794,7 +2794,7 @@
                         Future*
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products We Want To Qualify For In The Future</th>
