--- a/business/templates/financingplans/financingplan14.html
+++ b/business/templates/financingplans/financingplan14.html
@@ -19,7 +19,7 @@
                     Lenders You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products You Qualify For</th>
@@ -150,7 +150,7 @@
                     Personal Credit Cards You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Credit Card Name</th>
@@ -1157,7 +1157,7 @@
                     Revenue Lending You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1198,7 +1198,7 @@
                     Term Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1243,7 +1243,7 @@
                     Lines Of Credit You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <tbody>
                         <thead>
                         <th>Lender Name</th>
@@ -1270,7 +1270,7 @@
                     Personal Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <tbody>
                         <thead>
                         <tr>
@@ -1457,7 +1457,7 @@
 
 
                 <div class="card-body">
-                    <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable2" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Name</th>
@@ -1498,7 +1498,7 @@
                     No Credit Check Loans
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th> Lender Name</th>
@@ -1618,7 +1618,7 @@
                     Business Credit Cards You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <tbody>
                         <thead>
                         <tr>
@@ -2086,7 +2086,7 @@
                     Invoice Factoring Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -2127,7 +2127,7 @@
                     Invoice Financing Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -2171,7 +2171,7 @@
                     Equipment Financing Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -2212,7 +2212,7 @@
                     Lenders You Do Not Currently Qualify <br>*But Strategies On How To Qualify For Them In The Future*
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products We Want To Qualify For In The Future</th>
