--- a/business/templates/financingplans/financingplan15.html
+++ b/business/templates/financingplans/financingplan15.html
@@ -33,7 +33,7 @@
                         Lenders You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products You Qualify For</th>
@@ -163,7 +163,7 @@
                         Personal Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Credit Card Name</th>
@@ -1179,7 +1179,7 @@
                         Revenue Lending You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1223,7 +1223,7 @@
                         Term Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1272,7 +1272,7 @@
                         Lines Of Credit You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <th>Lender Name</th>
@@ -1315,7 +1315,7 @@
                         Personal Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -1502,7 +1502,7 @@
 
 
                     <div class="card-body">
-                        <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable2" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -1544,7 +1544,7 @@
                         No Credit Check Loans
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th> Lender Name</th>
@@ -1663,7 +1663,7 @@
                             Business Credit Cards You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <tbody>
                                 <thead>
                                 <tr>
@@ -2138,7 +2138,7 @@
                             SBA Loans You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <th>Lender Name</th>
                                 <th>Personal Credit Score Needed</th>
@@ -2180,7 +2180,7 @@
                             Invoice Factoring Loans You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Lender Name</th>
@@ -2224,7 +2224,7 @@
                             Invoice Financing Loans You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Lender Name</th>
@@ -2271,7 +2271,7 @@
                             Equipment Financing Loans You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Lender Name</th>
@@ -2316,7 +2316,7 @@
                             Future*
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Financing Products We Want To Qualify For In The Future</th>
