--- a/business/templates/financingplans/financingplan4.html
+++ b/business/templates/financingplans/financingplan4.html
@@ -18,7 +18,7 @@
                     Lenders You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products You Qualify For</th>
@@ -84,7 +84,7 @@
                     Personal Credit Cards You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Credit Card Name</th>
@@ -1091,7 +1091,7 @@
                     Personal Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <tbody>
                         <thead>
                         <tr>
@@ -1278,7 +1278,7 @@
 
 
                 <div class="card-body">
-                    <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable2" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Name</th>
@@ -1319,7 +1319,7 @@
                     No Credit Check Loans
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th> Lender Name</th>
@@ -1440,7 +1440,7 @@
                     Lenders You Do Not Currently Qualify <br>*But Strategies On How To Qualify For Them In The Future*
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products We Want To Qualify For In The Future</th>
