--- a/business/templates/financingplans/financingplan5.html
+++ b/business/templates/financingplans/financingplan5.html
@@ -23,7 +23,7 @@
                         Lenders You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products You Qualify For</th>
@@ -79,7 +79,7 @@
                         Personal Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Credit Card Name</th>
@@ -1154,7 +1154,7 @@
 
 
                     <div class="card-body">
-                        <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable2" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -1196,7 +1196,7 @@
                         No Credit Check Loans
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th> Lender Name</th>
@@ -1331,7 +1331,7 @@
                         Future*
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products We Want To Qualify For In The Future</th>
