--- a/business/templates/financingplans/financingplan6.html
+++ b/business/templates/financingplans/financingplan6.html
@@ -23,7 +23,7 @@
                             Lenders You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Financing Products You Qualify For</th>
@@ -110,7 +110,7 @@
                             Personal Credit Cards You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Credit Card Name</th>
@@ -1136,7 +1136,7 @@
                             Personal Loans You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <tbody>
                                 <thead>
                                 <tr>
@@ -1323,7 +1323,7 @@
 
 
                         <div class="card-body">
-                            <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable2" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Name</th>
@@ -1366,7 +1366,7 @@
                             No Credit Check Loans
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th> Lender Name</th>
@@ -1489,7 +1489,7 @@
                             Business Credit Cards You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <tbody>
                                 <thead>
                                 <tr>
@@ -1964,7 +1964,7 @@
                             Equipment Financing Loans You Qualify For
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Lender Name</th>
@@ -2009,7 +2009,7 @@
                             Future*
                         </div>
                         <div class="card-body">
-                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                            <table id="datatable" class="table table-striped table-responsive nowrap">
                                 <thead>
                                 <tr>
                                     <th>Financing Products We Want To Qualify For In The Future</th>
