--- a/business/templates/financingplans/financingplan7.html
+++ b/business/templates/financingplans/financingplan7.html
@@ -24,7 +24,7 @@
                         Lenders You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products You Qualify For</th>
@@ -112,7 +112,7 @@
                         Personal Credit Cards You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Credit Card Name</th>
@@ -1129,7 +1129,7 @@
                         Personal Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <tbody>
                             <thead>
                             <tr>
@@ -1316,7 +1316,7 @@
 
 
                     <div class="card-body">
-                        <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable2" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -1358,7 +1358,7 @@
                         No Credit Check Loans
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th> Lender Name</th>
@@ -1485,7 +1485,7 @@
                         Invoice Factoring Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1529,7 +1529,7 @@
                         Equipment Financing Loans You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Lender Name</th>
@@ -1574,7 +1574,7 @@
                         Future*
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
+                        <table id="datatable" class="table table-striped table-responsive nowrap">
                             <thead>
                             <tr>
                                 <th>Financing Products We Want To Qualify For In The Future</th>
