--- a/business/templates/financingplans/financingplan9.html
+++ b/business/templates/financingplans/financingplan9.html
@@ -18,7 +18,7 @@
                     Lenders You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products You Qualify For</th>
@@ -104,7 +104,7 @@
                     Personal Credit Cards You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Credit Card Name</th>
@@ -1111,7 +1111,7 @@
                     Revenue Lending You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1152,7 +1152,7 @@
                     Term Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1199,7 +1199,7 @@
 
 
                 <div class="card-body">
-                    <table id="datatable2" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable2" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Name</th>
@@ -1240,7 +1240,7 @@
                     No Credit Check Loans
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th> Lender Name</th>
@@ -1361,7 +1361,7 @@
                     Equipment Financing Loans You Qualify For
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Lender Name</th>
@@ -1402,7 +1402,7 @@
                     Lenders You Do Not Currently Qualify <br>*But Strategies On How To Qualify For Them In The Future*
                 </div>
                 <div class="card-body">
-                    <table id="datatable" class="table table-striped dt-responsive nowrap">
+                    <table id="datatable" class="table table-striped table-responsive nowrap">
                         <thead>
                         <tr>
                             <th>Financing Products We Want To Qualify For In The Future</th>
