--- a/whitelabelpartnerportal/templates/productManagement/editTradeline.html
+++ b/whitelabelpartnerportal/templates/productManagement/editTradeline.html
@@ -66,7 +66,7 @@
                                     <td>
                                         $<input name="charge" value="{{ tradeline.charge }}" type="number" step="0.01" min="0">
                                     </td>
-                                    <td>{{ tradeline.video_link }}</td>
+                                    <td><a class="btn btn-primary btn-sm" href="{{ tradeline.video_link }}">View</a></td>
                                     <td>
                                         <input name="product" value="{{ tradeline.product_id }}" type="hidden">
                                         <button class="btn btn-sm btn-primary">Apply</button>
