--- a/business/templates/financingProducts/businessCreditCard.html
+++ b/business/templates/financingProducts/businessCreditCard.html
@@ -18,11 +18,13 @@
 
     <section class="main-content">
         <div class="row">
+            {% if is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/t4rBD2GtLNA" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
+            {% endif %}
         </div>
         <div class="row">
             <div class="col-md-4">
