--- a/business/templates/businessCreditBuilding/BusinessCreditStepsOnlyPrograms.html
+++ b/business/templates/businessCreditBuilding/BusinessCreditStepsOnlyPrograms.html
@@ -14,12 +14,14 @@
     <div class="room">
         <section class="main-content">
             <div class="row">
+                {% if is_main_site %}
                 <div class="col-md-12">
                     <iframe width="100%" height="515" src="https://www.youtube.com/embed/86-3dyRmSXw" frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     <h3> Watch The Introduction Video To Understand How To Use The Extension</h3>
                 </div>
+                {% endif %}
             </div>
             <div class="row justify-content-center">
                 <div class="card">
