--- a/business/templates/businessCreditBuilding/goals.html
+++ b/business/templates/businessCreditBuilding/goals.html
@@ -99,6 +99,7 @@
                     </div>
                 </div>
             </div>
+            {% if is_main_site %}
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
                     <img src="https://images.pexels.com/photos/259027/pexels-photo-259027.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -116,6 +117,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
                     <img src="https://images.pexels.com/photos/590041/pexels-photo-590041.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
