--- a/business/templates/businessCreditCardStrategy.html
+++ b/business/templates/businessCreditCardStrategy.html
@@ -15,11 +15,13 @@
 
     <section class="main-content">
         <div class="row">
-            <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/fdA1f2mHpYI" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-            </div>
+            {% if is_main_site %}
+                <div class="col-md-12">
+                    <iframe width="100%" height="515" src="https://www.youtube.com/embed/fdA1f2mHpYI" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            {% endif %}
         </div>
         <style media="screen">
             .card-body {
