--- a/business/templates/businessCreditMonitoringSingup.html
+++ b/business/templates/businessCreditMonitoringSingup.html
@@ -26,11 +26,13 @@
     <section class="main-content">
 
         <div class="row">
+            {% if is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/HbRXBo4hrg0" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
+            {% endif %}
         </div>
         <h2 style="text-align:center;">View My Business Credit Reports</h2><br>
         <div class="row">
