--- a/business/templates/cooperateCredit/nopg.html
+++ b/business/templates/cooperateCredit/nopg.html
@@ -26,11 +26,13 @@
     <section class="main-content">
 
         <div class="row">
-            <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/9qkUJQkqOIY" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-            </div>
+            {% if is_main_site %}
+                <div class="col-md-12">
+                    <iframe width="100%" height="515" src="https://www.youtube.com/embed/9qkUJQkqOIY" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            {% endif %}
         </div>
         <div class="container-header">
             <h2 style="margin-top:2.5%" ;>Business Credit Cards (No Personal Gaurantee) You May Qualify For</h2>
