--- a/business/templates/cooperateCredit/revolving.html
+++ b/business/templates/cooperateCredit/revolving.html
@@ -26,11 +26,13 @@
     <section class="main-content">
 
         <div class="row">
+            {% if is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/WXGBi4hlFc4" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
+            {% endif %}
         </div>
         <div class="container-header">
             <h2 style="margin-top:2.5%" ;>Revolving Vendors You May Qualify For</h2>
