--- a/business/templates/financing.html
+++ b/business/templates/financing.html
@@ -23,11 +23,13 @@
     <section class="main-content">
 
         <div class="row">
+            {% if is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/M0YRRVOslM0" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
+            {% endif %}
         </div>
         <div class="container-header">
             <h2 style="margin-top:2.5%" ;>Put Your Information Below To See The Lenders You Qualify For</h2>
