--- a/business/templates/financingProducts/invoiceFactoring.html
+++ b/business/templates/financingProducts/invoiceFactoring.html
@@ -25,11 +25,13 @@
 
     <section class="main-content">
         <div class="row">
+            {% if is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="355" src="https://www.youtube.com/embed/rOQqoXCRE3g" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
+            {% endif %}
         </div>
         <div class="row">
             <div class="col-md-12">
