--- a/business/templates/financingProducts/smallBusinessAdminLoan.html
+++ b/business/templates/financingProducts/smallBusinessAdminLoan.html
@@ -27,11 +27,13 @@
 
     <section class="main-content">
         <div class="row">
+            {% if is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/nrVGB8PuppE" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
+            {% endif %}
         </div>
         <div class="row">
             <div class="col-md-12">
