--- a/goals/templates/goals/create_my_portal.html
+++ b/goals/templates/goals/create_my_portal.html
@@ -22,7 +22,7 @@
     </div>
 
     <section class="main-content" id="starting">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="jumbotron jumbotron-fluid">
                     <div class="cake-walk">
@@ -34,6 +34,7 @@
                     </div>
                 </div>
             </div>
+            {% if is_main_site %}
             <div class="col-md-6">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/_EwOUUkg7hA" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -42,10 +43,13 @@
                     Watch In Full Screen</a>
 
             </div>
+            {% endif %}
         </div>
         <br><br><br>
         <div class="row mb-5">
             {% for portal in available_portals %}
+                {% if portal.code == 'affiliate_partner' and not is_main_site %}
+                {% else %}
                 <div class="col-md-3 col-sm-6">
                     <div class="card mb-4 shadow-sm">
                         <div class="card-body">
@@ -63,6 +67,8 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
+
             {% endfor %}
             <div class="col-12 mb-3">
                 <button type="button" class="btn btn-primary" v-on:click="confirmChanges()">
