--- a/getdinerotoday/templates/homepage.html
+++ b/getdinerotoday/templates/homepage.html
@@ -13,11 +13,11 @@
     <section class="main-content">
         <div class="row w-no-padding margin-b-30">
         </div>
-        <div class="row">
+      <!--  <div class="row">
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/QiyNd2W7RGk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-        </div>
+        </div> -->
         <br>
         <h2 style="text-align:center;">Choose Your Industry Below</h2>
         <br>
