--- a/getdinerotoday/templates/components/Footer.html
+++ b/getdinerotoday/templates/components/Footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     
-    <span>Copyright © {% now "Y" %} {{dynamic.title}} / Need Help? Give Us A Call At {{ phone_number }}</span>
+    <span>Copyright © {% now "Y" %} {{dynamic.title}} / Need Help? Give Us A Call At {{ dynamic.phno }}</span>
     
 </footer>
 
